--- a/js3/Axios.html
+++ b/js3/Axios.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Axios Crash Course</title>
+    <title>Axios CRASH Course</title>
   </head>
   <body>
     <div class="container my-5">
@@ -40,5 +40,5 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="Axios.js"></script>
-  </body>
+</body>
 </html>
