--- a/js3/bookingAppointment.html
+++ b/js3/bookingAppointment.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
+        <div class="card" id="div">
             <div class="card-body">
                 <div class="card-heading bg-danger text-white mb-2">
                     <h1>Add User Details</h1>
