--- a/bookingAppointment.html
+++ b/bookingAppointment.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
-    <script src="booking.js"></script>
+    <script src="bookingtwo.js"></script>
     
 </body>
 </html>
