put,get and delete

--- a/js3/bookingAppointment.html
+++ b/js3/bookingAppointment.html
@@ -15,24 +15,24 @@
                 </div>
                 <form id="addform" class="form-inline">
                     <div class="form-group mr-2">
-                        <input class="form-control mr-2" id="username" placeholder="Username">
+                        <input class="form-control mr-2" id="username" placeholder="Username" required>
                     </div>
                     <div class="form-group mr-2">
-                        <input class="form-control mr-2" id="emailId" placeholder="EmialId">
+                        <input class="form-control mr-2" id="emailId" placeholder="EmialId" required>
                     </div>
                     <div class="form-group mr-2">
-                        <input type="tel"class="form-control mr-2" id="phone" placeholder="Contact Number">
-                        <input type="datetime-local" class="form-control mr-2" id="date" placeholder="Date & time">
+                        <input type="tel"class="form-control mr-2" id="phone" placeholder="Contact Number" required>
+                        <input type="datetime-local" class="form-control mr-2" id="date" placeholder="Date & time" required>
 
                     </div>
-                    <input type="submit" class="btn btn-success btn-lg submit">
+                    <input type="submit" class="btn btn-success btn-lg submit"value="submit">
                 </form>
                 <ul id="items"></ul>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
-    <script src="bookingtwo.js"></script>
+    <script src="bookingThree.js"></script>
     
 </body>
 </html>
